# mali-vulkan-icd-wrapper

./: CMakeLists.txt  README.md
cmake/: armhf_toolchain.cmake  config.hpp.in
cmake/manifests/: mali_icd.aarch64.json.in  mali_icd.armhf.json.in
config/: extensions.conf  mali_wrapper.json
manifests/: mali_wrapper_icd.aarch64.json  mali_wrapper_icd.armhf.json
src/: icd_main.cpp
src/core/: extension_manager.cpp  extension_manager.hpp  library_loader.cpp  library_loader.hpp  mali_loader.cpp  mali_loader.hpp  mali_wrapper_icd.cpp  mali_wrapper_icd.hpp  vulkan_dispatch.cpp  vulkan_dispatch.hpp  wrapper_main.cpp  wsi_manager.cpp  wsi_manager.hpp
src/extensions/: base_extension.hpp
src/extensions/map_memory_placed/: address_allocator.cpp  address_allocator.hpp  map_memory_placed.cpp  map_memory_placed.hpp  memory_mapper.cpp  memory_mapper.hpp
src/utils/: config.cpp  config.hpp  logging.cpp  logging.hpp
src/wsi/: compatible_present_modes.hpp  external_memory.cpp  external_memory.hpp  surface.hpp  surface_api.cpp  surface_api.hpp  surface_properties.cpp  surface_properties.hpp  swapchain_api.cpp  swapchain_api.hpp  swapchain_base.cpp  swapchain_base.hpp  synchronization.cpp  synchronization.hpp  wsi_factory.cpp  wsi_factory.hpp  wsi_private_data.cpp  wsi_private_data.hpp
src/wsi/extensions/: frame_boundary.cpp  frame_boundary.hpp  image_compression_control.cpp  image_compression_control.hpp  present_id.hpp  present_timing.hpp  swapchain_maintenance.cpp  swapchain_maintenance.hpp  wsi_extension.cpp  wsi_extension.hpp
src/wsi/headless/: surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp
src/wsi/layer_utils/: extension_list.cpp  format_modifiers.cpp  helpers.hpp  private_data.hpp  wsi_layer_experimental.hpp
src/wsi/layer_utils/wsialloc/: wsialloc.h
src/wsi/wayland/: surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp  wl_helpers.cpp  wl_helpers.hpp
src/wsi/x11/: drm_display.cpp  drm_display.hpp  shm_presenter.cpp  surface.cpp  surface.hpp  surface_properties.cpp  surface_properties.hpp  swapchain.cpp  swapchain.hpp
